# Aircraft-Engine-Degradation-RUL-Prediction

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DASHBOARD.md  Dockerfile  LICENSE  MLFLOW_GUIDE.md  MODEL_CARD.md  Makefile  README.md  SECURITY.md  ab_testing.py  api.py  auto_model_selector.py  config.py  cost_optimizer.py  dashboard.py  data_loader.py  data_validator.py  degradation_clusterer.py  digital_twin.py  docker-compose.yml  edge_inference.py  ensemble_predictor.py  envelope_analyzer.py  evaluator.py  feature_engineer.py  federated_trainer.py  fleet_risk_simulator.py  hyperparameter_optimizer.py  iv_estimator.py  llm_assistant.py  (+33 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
models/: __init__.py  anomaly_detector.py  baseline_model.py  gradient_boosting_models.py  lstm_model.py  stacking_ensemble.py  transformer_model.py
reports/: fleet_report_20260215_235529.html
tests/: __init__.py  conftest.py  test_ab_testing.py  test_causal_modules.py  test_causal_stats.py  test_data_loader.py  test_data_validator_survival.py  test_feature_engineer.py  test_fleet_risk.py  test_gradient_boosting.py  test_integration.py  test_mlflow_integration.py  test_model_comparison.py  test_model_monitor.py  test_models.py  test_phase11_modules.py  test_preprocessor.py  test_remaining_modules.py  test_rl_agent.py  test_stacking_ensemble.py  test_uncertainty.py
(+3 files in other folders)
